delete treeNodeDao WIP